# modern_mvs

./: .gitignore  CMakeLists.txt  README.md  config.json
future_code/: README.md  config.json
future_code/src/: main.cu
future_code/src/core/: cuda_kernels.cu  cuda_kernels.h  patchmatch.cu  patchmatch.h
future_code/src/cuda/: cuda_string.h  texture_array.cu
future_code/src/fusion/: point_cloud.h
future_code/src/math/: camera.cu  delaunay.cu  delaunay.h
future_code/src/utils/: io_utils.cc  options.cc  options.h  timer.h
scripts/bash/: format.sh  make.sh
src/: main.cu
src/core/: cuda_kernels.cu  cuda_kernels.h  patchmatch.cu  patchmatch.h
src/cuda/: cuda_helper.h  cuda_string.h  texture_array.cu  texture_array.h
src/fusion/: point_cloud.cu
src/math/: camera.cu  camera.h  mat.h  plane.h
src/utils/: common.h  io_utils.cc  io_utils.h  options.cc  options.h  timer.h
